Working on random things to find the return bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-ï»¿################################################################################
+»¿################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -8,3 +8,6 @@ src/*.o
 *.filters
 *.user
 player/
+gods/
+area/
+src/help.txt
