Adding resource folder to project

--- a/src/MSVC/embermud.vcxproj
+++ b/src/MSVC/embermud.vcxproj
@@ -141,11 +141,108 @@
     <ClInclude Include="..\recycle.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\area\air.are" />
+    <None Include="..\..\area\arachnos.are" />
+    <None Include="..\..\area\area.lst" />
+    <None Include="..\..\area\caedemon.are" />
+    <None Include="..\..\area\canyon.are" />
+    <None Include="..\..\area\catacomb.are" />
+    <None Include="..\..\area\chapel.are" />
+    <None Include="..\..\area\clans.are" />
+    <None Include="..\..\area\daycare.are" />
+    <None Include="..\..\area\draconia.are" />
+    <None Include="..\..\area\dream.are" />
+    <None Include="..\..\area\drow.are" />
+    <None Include="..\..\area\dwarven.are" />
+    <None Include="..\..\area\dylan.are" />
+    <None Include="..\..\area\eastern.are" />
+    <None Include="..\..\area\factions.dat" />
+    <None Include="..\..\area\galaxy.are" />
+    <None Include="..\..\area\gnome.are" />
+    <None Include="..\..\area\grave.are" />
+    <None Include="..\..\area\grove.are" />
+    <None Include="..\..\area\haon.are" />
+    <None Include="..\..\area\help.are" />
+    <None Include="..\..\area\hitower.are" />
+    <None Include="..\..\area\hood.are" />
+    <None Include="..\..\area\immort.are" />
+    <None Include="..\..\area\limbo.are" />
+    <None Include="..\..\area\mahntor.are" />
+    <None Include="..\..\area\marsh.are" />
+    <None Include="..\..\area\mega1.are" />
+    <None Include="..\..\area\midennir.are" />
+    <None Include="..\..\area\midgaard.are" />
+    <None Include="..\..\area\mirror.are" />
+    <None Include="..\..\area\mobfact.are" />
+    <None Include="..\..\area\moria.are" />
+    <None Include="..\..\area\MudProgs.prg" />
+    <None Include="..\..\area\newthalos.are" />
+    <None Include="..\..\area\nirvana.are" />
+    <None Include="..\..\area\ofcol.are" />
+    <None Include="..\..\area\ofcol2.are" />
+    <None Include="..\..\area\olympus.are" />
+    <None Include="..\..\area\plains.are" />
+    <None Include="..\..\area\redferne.are" />
+    <None Include="..\..\area\school.are" />
+    <None Include="..\..\area\sewer.are" />
+    <None Include="..\..\area\shire.are" />
+    <None Include="..\..\area\smurf.are" />
+    <None Include="..\..\area\social.are" />
+    <None Include="..\..\area\TEMP" />
+    <None Include="..\..\area\thalos.are" />
+    <None Include="..\..\area\trollden.are" />
+    <None Include="..\..\area\valley.are" />
+    <None Include="..\..\area\wyvern.are" />
+    <None Include="..\..\clan\clan.dir" />
+    <None Include="..\..\classes\Cleric" />
+    <None Include="..\..\classes\Mage" />
+    <None Include="..\..\classes\Thief" />
+    <None Include="..\..\classes\Warrior" />
+    <None Include="..\..\doc\EmberAreaFormat.pdf" />
+    <None Include="..\..\doc\EmberMUD.license" />
+    <None Include="..\..\doc\MOBProg.DOC" />
+    <None Include="..\..\doc\MOBProg.trigger.DOC" />
+    <None Include="..\..\doc\old\license.diku" />
+    <None Include="..\..\doc\old\license.merc" />
+    <None Include="..\..\doc\old\license.rom" />
+    <None Include="..\..\doc\old\rom.credits" />
+    <None Include="..\..\doc\raffect.DOC" />
+    <None Include="..\..\doc\README.merc" />
+    <None Include="..\..\doc\README.rom" />
+    <None Include="..\..\gods\gods.dir" />
     <None Include="..\ember.cfg" />
     <None Include="..\formatcode" />
     <None Include="..\Makefile" />
     <None Include="..\startup" />
     <None Include="..\stripcr" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\area\socials.txt" />
+    <Text Include="..\..\area\todo.txt" />
+    <Text Include="..\..\doc\addcomm.txt" />
+    <Text Include="..\..\doc\addrace.txt" />
+    <Text Include="..\..\doc\clan-doc.txt" />
+    <Text Include="..\..\doc\crlffix.txt" />
+    <Text Include="..\..\doc\design\resets.txt" />
+    <Text Include="..\..\doc\factions-doc.txt" />
+    <Text Include="..\..\doc\old\act.txt" />
+    <Text Include="..\..\doc\old\area.txt" />
+    <Text Include="..\..\doc\old\class.txt" />
+    <Text Include="..\..\doc\old\command.txt" />
+    <Text Include="..\..\doc\old\contrib.txt" />
+    <Text Include="..\..\doc\old\drool.txt" />
+    <Text Include="..\..\doc\old\hacker.txt" />
+    <Text Include="..\..\doc\old\memory.txt" />
+    <Text Include="..\..\doc\old\new.txt" />
+    <Text Include="..\..\doc\old\pfile.txt" />
+    <Text Include="..\..\doc\old\port.txt" />
+    <Text Include="..\..\doc\old\security.txt" />
+    <Text Include="..\..\doc\old\sites.txt" />
+    <Text Include="..\..\doc\old\skill.txt" />
+    <Text Include="..\..\doc\old\sky.txt" />
+    <Text Include="..\..\doc\old\trad.txt" />
+    <Text Include="..\..\doc\progvars.txt" />
+    <Text Include="..\..\doc\random.txt" />
   </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
